Mon Sep 25 19:46:37 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * DAnCE/Plan_Generator/Plan_Generator.mpc (project): Fixed the MPC
          file by removing the "requires += RepositoryManager" as this
          project, as well as other projects that depend on this, will not
          be built unless RepositoryManager=1 is set.

Mon Sep 25 14:42:03 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher.mpc: Fixed the mpc file.

Mon Sep 25 13:06:05 UTC 2006  Boris Kolpackov  <boris@codesynthesis.com>

        * CCF/CCF/IDL2/SemanticAction/Operation.cpp:
        * CCF/CCF/IDL2/SemanticAction/Operation.hpp:
        * CCF/CCF/IDL2/SemanticAction/Impl/Factory.cpp:
        * CCF/CCF/CIDL/SemanticAction/Composition.cpp:
        * CCF/CCF/CIDL/SemanticAction/Composition.hpp:

        Move some operator<< operators to the global scope so that they
        do not hide others.

Sun Sep 24 21:06:07 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
        Removed the unnecessary Repoman head file.

Sat Sep 23 04:31:13 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h
        * DAnCE/RepositoryManager/RMadmin.cpp
        * ciao/RepositoryManager.idl
        Added the replace argument in installPackage () and createPackage ()
        functions and extend the functionalities of these two functions based
        on the latest D&C spec.

Sat Sep 23 04:07:59 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * DAnCE/Plan_Generator
        * DAnCE/Plan_Generator/PCVisitor.cpp
        * DAnCE/Plan_Generator/PCVisitor.h
        * DAnCE/Plan_Generator/PCVisitorBase.cpp
        * DAnCE/Plan_Generator/PCVisitorBase.h
        * DAnCE/Plan_Generator/PCVisitorBase.inl
        * DAnCE/Plan_Generator/Plan_Generator.mpc